--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
   </template>
 
 <script src="js/main.js"></script>
+<script src="js/pin.js"></script>
+<script src="js/form.js"></script>
+<script src="js/state.js"></script>
 
 </body>
 </html>
