--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
     </div>
   </template>
 
-<script src="js/main.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/form.js"></script>
 <script src="js/state.js"></script>
+<script src="js/card.js"></script>
 
 </body>
 </html>
