--- a/index.html
+++ b/index.html
@@ -249,9 +249,11 @@
     </div>
   </template>
 
+<script src="js/utils.js"></script>
+<script src="js/data.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/form.js"></script>
-<script src="js/state.js"></script>
+<script src="js/map.js"></script>
 <script src="js/card.js"></script>
 
 </body>
