--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
 <script src="js/form.js"></script>
 <script src="js/map.js"></script>
 <script src="js/card.js"></script>
+<script src="js/move.js"></script>
 
 </body>
 </html>
