Отрисовка сообщения об ошибке

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 <script src="js/map.js"></script>
 <script src="js/card.js"></script>
 <script src="js/move.js"></script>
+<script src="js/message.js"></script>
 
 </body>
 </html>
