--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 <script src="js/map.js"></script>
 <script src="js/card.js"></script>
 <script src="js/move.js"></script>
+<script src="js/filter.js"></script>
 
 </body>
 </html>
