--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
     </div>
   </template>
 
+<script src="js/debounce.js"></script>
 <script src="js/backend.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/const.js"></script>
