--- a/index.html
+++ b/index.html
@@ -253,14 +253,15 @@
 <script src="js/backend.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/const.js"></script>
-<script src="js/pin.js"></script>
-<script src="js/message.js"></script>
-<script src="js/form.js"></script>
-<script src="js/map.js"></script>
-<script src="js/card.js"></script>
-<script src="js/move.js"></script>
 <script src="js/filter.js"></script>
+<script src="js/message.js"></script>
+<script src="js/card.js"></script>
+<script src="js/pin.js"></script>
 <script src="js/data.js"></script>
+<script src="js/map.js"></script>
+<script src="js/form.js"></script>
+<script src="js/move.js"></script>
+<script src="js/avatar.js"></script>
 
 </body>
 </html>
